Address review: depth cap in decoder, gate plan-node maps on isSendStats, 50ms success-path drain
- MultiStageStatsTreeDecoder: add MAX_OPERATOR_TREE_DEPTH=64 guard; recursive decodeNode
  now accepts a depth counter and throws DecodeFailedException if exceeded, preventing
  Netty event-loop stack overflow on malformed payloads.
- PlanNodeToOpChain: gate assignPlanNodeIds and record() behind context.isSendStats();
  in legacy mode (default) the per-opchain IdentityHashMap is never allocated or populated.
- QueryDispatcher: add STATS_DRAIN_ON_SUCCESS_MS=50 constant and use
  Math.min(50ms, remainingMs) on the success path so a single slow opchain cannot delay
  the client response until the full query deadline.
- StreamingDispatchObserver: improve Javadoc on _opChainsReportedForThisServer and cancel()
  to document the threading boundary (gRPC inbound vs fanOutCancel thread).
- MultiStageStatsTreeDecoderTest: add depth-limit boundary tests (exactly at limit and one over).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>